Added in Bisection Controller

--- a/bin/run_physics_model.ipynb
+++ b/bin/run_physics_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "80dc619c",
    "metadata": {},
    "outputs": [
@@ -11,15 +11,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The optimal value is 2.171681091905777e+19\n",
-      "Ul = 236869.9329\n",
-      "Um = -152652.6088\n",
-      "Uu = -5705.9801\n",
-      "Kml = 917171.4648\n",
-      "Kum = 927300.0998\n",
-      "Vm = 40.3624\n",
-      "Vu = 50.1466\n",
-      "The norm of the residual is  4660129925.126313\n"
+      "The optimal value is 5.460654078536735e+18\n",
+      "Ul = 2380417.9358\n",
+      "Um = -1703074.2175\n",
+      "Uu = -6305.8085\n",
+      "Kml = 2801612.1501\n",
+      "Kum = 23109.5629\n",
+      "Vm = -1.2902\n",
+      "Vu = 3.4186\n",
+      "The norm of the residual is  2336804244.8045874\n"
      ]
     }
    ],
@@ -44,9 +44,9 @@
     "t_in_wet = 62.25 #relative humidity\n",
     "\n",
     "# Data\n",
-    "P_u = [value if mode == \"Upper On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
-    "P_m = [value if mode == \"Heat Pump On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
-    "P_l = [value if mode == \"Lower On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "P_u = [value if mode == \"Upper On\" else 0 for value, mode in zip(df[\"Water Heating Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "P_m = [value if mode == \"Heat Pump On\" else 0 for value, mode in zip(df[\"Water Heating Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "P_l = [value if mode == \"Lower On\" else 0 for value, mode in zip(df[\"Water Heating Electric Power\"], df[\"Water Heating Mode\"])]\n",
     "T_u = df[\"T_WH3\"].values\n",
     "T_m = df[\"T_WH10\"].values\n",
     "T_l = df[\"T_WH12\"].values\n",
@@ -116,29 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "7c7f4daf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "T_u_positive = [value for value in T_u if value > 0]\n",
-    "T_u_positive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f8157f4b",
    "metadata": {},
    "outputs": [],
@@ -185,7 +163,270 @@
     "        Tm_pred.append(Tm_next)\n",
     "        Tl_pred.append(Tl_next)\n",
     "\n",
-    "    return np.array(Tu_pred), np.array(Tm_pred), np.array(Tl_pred)"
+    "    return np.array(Tu_pred) #, np.array(Tm_pred), np.array(Tl_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c73a4e7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([40., 40., 40., 40., 40., 40., 40., 40.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = predict_temperatures([40,40,40], 8, theta.value, [0, 0, 0, 0, 0, 0, 0, 0])\n",
+    "predictions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "108e7c03",
+   "metadata": {},
+   "source": [
+    "## Controller"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ada09f30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8 hour horizon model Data Driven Model\n",
+    "import cvxpy as cp\n",
+    "import numpy as np\n",
+    "\n",
+    "i = 8 #horizon\n",
+    "lambda_ = 1\n",
+    "l = 0 #soft constraint\n",
+    "n = 8\n",
+    "T_min = 49\n",
+    "T_max = 60\n",
+    " \n",
+    "\n",
+    "def getOptimalSetpoint(T_init, draws): #input values [T_init (upper, middle, low temperature), draws]\n",
+    "\n",
+    "  # Construct the problem.\n",
+    "  #declare variables\n",
+    "  T = cp.Variable(i) #Temperatures \n",
+    "  s = cp.Variable(i) #setpoint variables\n",
+    "  z = cp.Variable(i) #unmet demand\n",
+    "  objective = cp.Minimize(cp.sum(lambda_ * z**2 + (lambda_*l) * s))\n",
+    "\n",
+    "  constraints = [\n",
+    "      s >= 49,\n",
+    "      s <= T_max,\n",
+    "      T == predict_temperatures(T_init, i, theta.value, draws),\n",
+    "      z >= T_min - T,\n",
+    "      z >= 0\n",
+    "      ]\n",
+    "  prob = cp.Problem(objective, constraints)\n",
+    "\n",
+    "  # The optimal objective value is returned by `prob.solve()`.\n",
+    "  result = prob.solve()\n",
+    "\n",
+    "  # Print results\n",
+    "  print(\"Optimal T values:\", T.value)\n",
+    "  print(\"Optimal s values:\", s.value)\n",
+    "  print(\"Optimal objective value:\", result)\n",
+    "\n",
+    "  return s.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9880a260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal T values: [40. 40. 40. 40. 40. 40. 40. 40.]\n",
+      "Optimal s values: [52.90340427 52.90340427 52.90340427 52.90340427 52.90340427 52.90340427\n",
+      " 52.90340427 52.90340427]\n",
+      "Optimal objective value: 647.9999707407644\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([52.90340427, 52.90340427, 52.90340427, 52.90340427, 52.90340427,\n",
+       "       52.90340427, 52.90340427, 52.90340427])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getOptimalSetpoint([40,40,40], [0, 0, 0, 0, 0, 0, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b7f5402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Implment controller\n",
+    "\n",
+    "#run 12 node model\n",
+    "\n",
+    "import os\n",
+    "import datetime as dt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from ochre import Dwelling\n",
+    "from ochre.utils import default_input_path  # for using sample files\n",
+    "from ochre import HeatPumpWaterHeater\n",
+    "\n",
+    "# Define equipment and simulation parameters\n",
+    "setpoint_default = 51  # in C #alternate b/w 60 and 49\n",
+    "deadband_default = 5.56  # in C\n",
+    "max_setpoint = 60\n",
+    "min_setpoint = 49\n",
+    "water_nodes = 12\n",
+    "run_range = False #runs simulation for a variety of setpoints specified in setpoint_range\n",
+    "simulation_days = 1#220 #172 #220\n",
+    "time_interval = 15 # adjust setpoint every 15 minutes?\n",
+    "\n",
+    "site_number = '90023' #90023 #10292#'10441'\n",
+    "\n",
+    "flow_data = f'net_flow_{site_number}.csv'\n",
+    "\n",
+    "#start_date = dt.datetime(2013, 1, 17, 0, 1) #10441\n",
+    "start_date = dt.datetime(2013, 1, 1, 0, 1) #10292, 90023\n",
+    "#start_date = dt.datetime(2013, 1, 23, 0, 1) #90159\n",
+    "setpoint_range = [setpoint_default]\n",
+    "\n",
+    "if run_range == True:\n",
+    "    setpoint_range = np.arange(min_setpoint, max_setpoint, 0.5)\n",
+    "\n",
+    "for s in setpoint_range: #run simulation for every setpoint in valid range\n",
+    "    setpoint_default = s\n",
+    "    setpoint = setpoint_default #initialize setpoint\n",
+    "    equipment_args = {\n",
+    "        \"start_time\": start_date,  # year, month, day, hour, minute\n",
+    "        \"time_res\": dt.timedelta(minutes=1),\n",
+    "        \"duration\": dt.timedelta(days=simulation_days),\n",
+    "        \"verbosity\": 9,  # required to get setpoint and deadband in results\n",
+    "        \"save_results\": False,  # if True, must specify output_path\n",
+    "        # \"output_path\": os.getcwd(),        # Equipment parameters\n",
+    "        \"Setpoint Temperature (C)\": setpoint_default,\n",
+    "        \"Tank Volume (L)\": 250,\n",
+    "        \"Tank Height (m)\": 1.22,\n",
+    "        \"UA (W/K)\": 2.17,\n",
+    "        \"HPWH COP (-)\": 4.5,\n",
+    "        \"water_nodes\": water_nodes\n",
+    "    }\n",
+    "\n",
+    "    # Create water draw schedule\n",
+    "    times = pd.date_range(\n",
+    "        equipment_args[\"start_time\"],\n",
+    "        equipment_args[\"start_time\"] + equipment_args[\"duration\"],\n",
+    "        freq=equipment_args[\"time_res\"],\n",
+    "        inclusive=\"left\",\n",
+    "    )\n",
+    "    water_draw_magnitude = 12  # L/min\n",
+    "    #withdraw_rate = np.random.choice([0, water_draw_magnitude], p=[0.99, 0.01], size=len(times))\n",
+    "    withdraw_rate = np.loadtxt(f'C:\\\\Users\\\\janel\\\\OneDrive\\\\Documents\\\\GitHub\\\\OCHRE-nrel\\\\ochre\\\\defaults\\\\Input Files\\\\net_flow_{site_number}.csv')\n",
+    "    withdraw_rate = withdraw_rate[:len(times)]\n",
+    "    current_draws = np.loadtxt(f'C:\\\\Users\\\\janel\\\\OneDrive\\\\Documents\\\\GitHub\\\\OCHRE-nrel\\\\ochre\\\\defaults\\\\Input Files\\\\net_flow_{site_number}.csv')\n",
+    "    current_draws = current_draws[:len(times)]\n",
+    "    schedule = pd.DataFrame(\n",
+    "        {\n",
+    "            \"Water Heating (L/min)\": withdraw_rate,\n",
+    "            \"Water Heating Setpoint (C)\": setpoint_default,  # Setting so that it can reset\n",
+    "            \"Water Heating Deadband (C)\": deadband_default,  # Setting so that it can reset\n",
+    "            \"Zone Temperature (C)\": 20,\n",
+    "            \"Zone Wet Bulb Temperature (C)\": 15,  # Required for HPWH\n",
+    "            \"Mains Temperature (C)\": 7,\n",
+    "        },\n",
+    "        index=times,\n",
+    "    )\n",
+    "\n",
+    "    # Initialize equipment\n",
+    "    hpwh = HeatPumpWaterHeater(schedule=schedule, **equipment_args)\n",
+    "\n",
+    "    # Simulate\n",
+    "    data = pd.DataFrame()\n",
+    "    data = {'draw_data' :[], 'setpoint' :[]}\n",
+    "    control_signal = {}\n",
+    "    setpoints = []\n",
+    "\n",
+    "    #generate noise for setpoint profile\n",
+    "    for t in hpwh.sim_times:\n",
+    "        # Change setpoint based on hour of day\n",
+    "        #get optimal setpoint\n",
+    "\n",
+    "        #Change setpoint every 15 minutes\n",
+    "        current_time = t.minute\n",
+    "        if (current_time % time_interval == 0): #time interval\n",
+    "            current_draws = current_draws[time_interval:]#remove previous draws\n",
+    "            setpoint = getOptimalSetpoint([hpwh.model.next_states[2], hpwh.model.next_states[9]] current_draws) #get node temperatures from 3 and 10\n",
+    "            print(setpoint)\n",
+    "        control_signal = {\n",
+    "            \"Setpoint\": setpoint\n",
+    "        }\n",
+    "\n",
+    "        setpoints.append(setpoint)\n",
+    "        # Run with controls\n",
+    "        _ = hpwh.update(control_signal=control_signal)\n",
+    "\n",
+    "    \n",
+    "    df = hpwh.finalize()\n",
+    "\n",
+    "    cols_to_plot = [\n",
+    "        \"Hot Water Outlet Temperature (C)\",\n",
+    "        \"Hot Water Average Temperature (C)\",\n",
+    "        \"Water Heating Deadband Upper Limit (C)\",\n",
+    "        \"Water Heating Deadband Lower Limit (C)\",\n",
+    "        \"Water Heating Electric Power (kW)\",\n",
+    "        \"Hot Water Unmet Demand (kW)\",\n",
+    "        \"Hot Water Delivered (L/min)\",\n",
+    "    ]\n",
+    "\n",
+    "    cols_to_save = [\n",
+    "        \"Hot Water Outlet Temperature (C)\",\n",
+    "        #\"T_WH1\",\n",
+    "        #\"T_WH2\"\n",
+    "        \"T_WH3\",\n",
+    "        #\"T_WH7\",\n",
+    "        \"T_WH10\",\n",
+    "        \"T_WH12\"\n",
+    "        #\"T_AMB\",\n",
+    "        \"Water Heating Electric Power (kW)\",\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "      # For the DataFrame, select columns and calculate the rolling average for each column\n",
+    "    to_save = df[cols_to_save].rolling(window=15).mean()\n",
+    "    # Calculate the rolling average for 'setpoints' with window size 15\n",
+    "    avg_setpoints = np.convolve(setpoints, np.ones(15)/15, 'same')\n",
+    "    avg_setpoints = avg_setpoints[14::15]\n",
+    "    to_save = to_save[14::15]\n",
+    "    to_save[\"Setpoint\"] = pd.Series(avg_setpoints, index=to_save.index)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    to_save = to_save[:-1] \n",
+    "    to_save.to_csv(f'output_site_{site_number}_physics.csv', mode='a', header=True, index=False)\n"
    ]
   },
   {
@@ -198,20 +439,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7231f103",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE Upper: 13.365\n",
-      "MSE Middle: 75.945\n",
-      "MSE Lower: 92.200\n",
-      "RMSE Upper: 3.655861706679929\n",
-      "RMSE Middle: 8.714624634918259\n",
-      "RMSE Lower: 9.602061219758916\n"
+     "ename": "IndexError",
+     "evalue": "too many indices for array: array is 2-dimensional, but 3 were indexed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 43\u001b[0m\n\u001b[0;32m     40\u001b[0m y_pred_array \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(predictions)  \u001b[38;5;66;03m# shape: (n_sam09ples, 3, window_size) or similar\u001b[39;00m\n\u001b[0;32m     41\u001b[0m y_true_array \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(true_values)\n\u001b[1;32m---> 43\u001b[0m mse_upper \u001b[38;5;241m=\u001b[39m mean_squared_error(y_true_array[:, \u001b[38;5;241m0\u001b[39m, :]\u001b[38;5;241m.\u001b[39mflatten(), \u001b[43my_pred_array\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mflatten())\n\u001b[0;32m     44\u001b[0m mse_middle \u001b[38;5;241m=\u001b[39m mean_squared_error(y_true_array[:, \u001b[38;5;241m1\u001b[39m, :]\u001b[38;5;241m.\u001b[39mflatten(), y_pred_array[:, \u001b[38;5;241m1\u001b[39m, :]\u001b[38;5;241m.\u001b[39mflatten())\n\u001b[0;32m     45\u001b[0m mse_lower \u001b[38;5;241m=\u001b[39m mean_squared_error(y_true_array[:, \u001b[38;5;241m2\u001b[39m, :]\u001b[38;5;241m.\u001b[39mflatten(), y_pred_array[:, \u001b[38;5;241m2\u001b[39m, :]\u001b[38;5;241m.\u001b[39mflatten())\n",
+      "\u001b[1;31mIndexError\u001b[0m: too many indices for array: array is 2-dimensional, but 3 were indexed"
      ]
     }
    ],
@@ -222,7 +462,7 @@
     "# Choose data based on type\n",
     "\n",
     "if type == 1:  # HPWH\n",
-    "    val_data = pd.read_csv(\"output_site_90159.csv\")\n",
+    "    val_data = pd.read_csv(\"output_site_90023.csv\")\n",
     "else:  # EWH\n",
     "    val_data = pd.read_csv(\"output_site_90023_ewh.csv\")\n",
     "\n",
@@ -273,40 +513,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "e8d39eac",
+   "execution_count": null,
+   "id": "b8315dea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([48.40347495, 48.40347495, 48.40347495, 48.40347495, 48.40347495,\n",
-       "        48.40347495, 48.40347495, 48.40347495]),\n",
-       " array([48.40347626, 48.40347626, 48.40347626, 48.40347626, 48.40347626,\n",
-       "        48.40347626, 48.40347626, 48.40347626]),\n",
-       " array([48.40347495, 48.40347495, 48.40347495, 48.40347495, 48.40347495,\n",
-       "        48.40347495, 48.40347495, 48.40347495]))"
+       "array([60.52664956, 60.52664956, 60.52664956, 60.52664956, 60.52664956,\n",
+       "       60.52664956, 60.52664956, 60.52664956])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predictions[0]\n"
+    "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 28,
    "id": "5f540002",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe860cb60fc340e98b3af45dc0fd052b",
+       "model_id": "76d06e447b954a1c991f1b68daa654be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -323,7 +559,7 @@
        "<function __main__.plot_predictions_by_hour(day, hour)>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,27 +618,31 @@
     "    # Primary axis for temperatures\n",
     "    fig, ax1 = plt.subplots(figsize=(10, 5))\n",
     "\n",
-    "    ax1.plot(pred_times, y_true[0], label=\"Actual Outlet Temp\", color=\"black\", marker='o')\n",
-    "    ax1.plot(pred_times, y_pred[0], label=\"Predicted Outlet Temp\", color=\"orange\", marker='x', linestyle=\"--\")\n",
-    "    ax1.set_ylabel(\"Temperature (°C)\")\n",
-    "    ax1.set_title(f\"{date_label} @ {time_labels[time_idx]} — Predictions for t+0 to t+7\")\n",
+    "    ax1.plot(pred_times, y_true[0], label=\"Actual Outlet Temp\", color=\"#D95F02\", marker='o')\n",
+    "    ax1.plot(pred_times, y_pred, label=\"Predicted Outlet Temp\", color=\"#FC8D62\", marker='x', linestyle=\"--\")\n",
+    "    ax1.set_ylabel(\"Temperature (°C)\", color=\"#D95F02\", fontsize=14)\n",
+    "    ax1.set_title(\"Physics-Based Model Predictions\", fontsize=14)\n",
+    "    #ax1.set_title(f\"{date_label} @ {time_labels[time_idx]} — Predictions for t+0 to t+7\")\n",
+    "    ax1.tick_params(axis='y', colors=\"#D95F02\")\n",
     "    ax1.set_xticks(pred_times)\n",
     "    ax1.set_xticklabels(pred_times, rotation=45)\n",
+    "    ax1.set_xlabel(\"Time of Day\", fontsize=14)\n",
     "    ax1.grid(True)\n",
     "\n",
     "    # Secondary axis for water draw\n",
     "        # Secondary axis for water draw\n",
     "    ax2 = ax1.twinx()\n",
     "    ax2.plot(pred_times, draw_slice, label=\"Water Drawn (L)\", color=\"blue\", linestyle=\"dotted\", marker='s')\n",
-    "    ax2.plot(pred_times, power_slice, label=\"Average Power (kWH)\", color = \"green\")\n",
-    "    ax2.set_ylabel(\"Water Drawn (L)\")\n",
+    "    #ax2.plot(pred_times, power_slice, label=\"Average Power (kWH)\", color = \"green\")\n",
+    "    ax2.set_ylabel(\"Water Drawn (L)\", color=\"blue\", fontsize=14)\n",
+    "    ax2.tick_params(axis='y', colors=\"blue\")\n",
     "    ax2.set_ylim(0, 200)  # Ensure 0 is at the bottom\n",
     "\n",
     "\n",
     "    # Combined legend\n",
     "    lines_1, labels_1 = ax1.get_legend_handles_labels()\n",
     "    lines_2, labels_2 = ax2.get_legend_handles_labels()\n",
-    "    ax1.legend(lines_1 + lines_2, labels_1 + labels_2, loc='upper left', bbox_to_anchor=(1.05, 1))\n",
+    "    #ax1.legend(lines_1 + lines_2, labels_1 + labels_2, loc='upper left', bbox_to_anchor=(1.05, 1), fontsize=14)\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
