Added in Water Forecasting

--- a/bin/run_physics_model.ipynb
+++ b/bin/run_physics_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "80dc619c",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f8157f4b",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
     "        )\n",
     "\n",
     "        # Lower node\n",
-    "        Tl_next = Tl - (1 / (rho * cp * (V + Vm + Vu)))  *(\n",
+    "        Tl_next = Tl - (1 / (rho * cp * (Vl)))  *(\n",
     "            Ul * dt * vt *  (Tl - T_a) +\n",
     "            Kml * dt * vt * (Tl - Tm)\n",
     "        )\n",
@@ -168,17 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c73a4e7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([40., 40., 40., 40., 40., 40., 40., 40.])"
+       "array([40.        , 40.        , 41.74691174, 41.74691174, 41.74691174,\n",
+       "       41.74691174, 41.74691174, 41.74691174])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ada09f30",
    "metadata": {},
    "outputs": [],
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9880a260",
    "metadata": {},
    "outputs": [
@@ -267,7 +268,7 @@
        "       52.90340427, 52.90340427, 52.90340427])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
